--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
 Поэтому, прежде чем выходить на биржу, надо подготовить финансовую подушку безопасности. Часть сбережений – не меньше 3–6 ваших месячных доходов – стоит оставить на депозите или накопительном счете в банке. И только когда запас на черный день сделан, а свободные деньги еще остались и вы готовы ими рискнуть, можно подумать об инвестициях.
 
 Главное помнить, что прибыль — это не слепая удача, как в казино, а результат хорошо продуманных действий. Не игра, а работа.</string>
+    <string name="title2_text">С чего начать? Я хочу попробовать.</string>
+    <string name="description2_text">1.Оцените, сколько денег вы готовы вложить. 2.Подумайте, сколько времени вы готовы тратить. 3.Выберите стратегию и активы. 4.Найдите компанию-посредника</string>
 </resources>
